# tinny_data_collect

./: .gitignore  CMakeLists.txt  Config.h.in  README.md  coyomi.yaml  main.cpp
src/: OrientalMotorInterface.h  Pose2X.h  Urg2d.cpp  Urg2d.h  checkDirectory.h  common.h  global_variable.h  query.h  shared_struct.h  shm_board.h  thread_2D_Lidar_b.h  time_utility.h
src/GetDistance2D/inc/: Connection_information.h
src/GetDistance2D/src/: Connection_information.cpp
src/Joystick_test/: CMakeLists.txt  main.cpp  main2.cpp
src/SDL2_TEST/: CMakeLists.txt  main.cpp
